# esp-bridge-mcp-robot

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: pip-face.md
.claude/hooks/: dispatch_mood.py
docs/: face_ideas_candidates.json  make_gif.py
src/: .env.example
src/modules/: cli.py
src/modules/assistant/: brain.py  robot.py  tools.py
src/modules/espbridge/: display.py
src/modules/espbridge/eyes/: __init__.py  _registry.py  activities.py  decor.py  engine.py  gestures.py  moods.py  painters.py  primitives.py  record.py  spec.py
src/modules/espbridge/eyes/actions/: __init__.py  building.py  clock.py  connecting.py  debugging.py  deploying.py  editing.py  glitch.py  jackpot.py  listening.py  matrix.py  notif_badge.py  now_playing.py  ping_pong.py  processing.py  recording.py  scanning.py  searching.py  smoking.py  sponsor.py  testing.py  thinking.py  waiting.py  warp.py  weather.py  working.py
src/modules/espbridge/eyes/gestures/: __init__.py  acknowledge.py  blink.py  blink_down.py  blink_up.py  cross_eyes.py  double_blink.py  excited.py  glitch.py  laugh.py  look_down.py  look_left.py  look_right.py  look_up.py  nod.py  pop.py  refuse.py  roll.py  scan.py  scan_sweep.py  shiver.py  squint.py  wink.py  wink_left.py  wink_right.py
src/modules/espbridge/eyes/moods/: __init__.py  alert.py  angry.py  attentive.py  awe.py  bored.py  chill.py  confused.py  cool.py  dead.py  despair.py  devil.py  disoriented.py  dumb.py  focused.py  furious.py  gloomy.py  happy.py  kawaii.py  lovely.py  nervous.py  neutral.py  overheated.py  sad.py  scared.py  skeptical.py  sleepy.py  standby.py  surprised.py  suspicious.py  tired.py  wired.py  worried.py  zen.py
(+3 files in other folders)
