[project]
name = "esp-bridge-mcp-robot"
version = "0.1.0"
description = "A robot assistant with an animated OLED face, running on an ESP32 over python-esp-bridge."
readme = "README.md"
# python-esp-bridge needs 3.10+; 3.13 lower bound keeps our own deps happy.
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.4",
    "python-dotenv>=1.0",
    "python-esp-bridge[all]>=0.15.0",
]

[project.optional-dependencies]
dev = ["pillow>=10"]   # headless GIF capture (demo gNN) + docs/make_gif.py

[project.scripts]
pip-robot = "modules.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modules"]
