[project]
name = "esp-bridge-mcp-robot"
version = "0.1.0"
description = "A robot assistant with an animated OLED face, running on an ESP32 over python-esp-bridge."
readme = "README.md"
# python-esp-bridge needs 3.10+; 3.13 lower bound keeps our own deps happy.
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3",                       # MCP server (default mode) over stdio
    "numpy>=2.4.6",
    "ollama>=0.4",                      # local chat backend (ROBOT_MCP=false)
    "pillow>=10",                       # eye rendering, OLED-window emulator, GIF capture
    "python-dotenv>=1.0",              # .env loading
    "python-esp-bridge[all]>=0.15.0",  # ESP32 OLED over Bluetooth (BlueZ on Linux, WinRT on Windows)
]

[project.scripts]
pip-robot = "modules.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modules"]
